--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "camel-case-converter",
-  "version": "1.0.0",
-  "description": "This package can be used to convert object array and string in snake_case to camelCase",
+  "version": "1.1.0",
+  "description": "This package can be used to convert object array and string in snake_case/snake-case to camelCase",
   "main": "app.js",
   "scripts": {
     "lint": "eslint .",
