--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'master'
   pull_request:
-   branches: '*'
+    branches: ['dev']
 jobs:
   build:
     runs-on: ubuntu-latest
